testament/tests/shouldfail/terrormsg.nim
discard """
line: 8
column: 6
errormsg: "wrong error message"
"""

# test should fail because the line directive is wrong
echo undeclared
